--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -160,7 +160,7 @@ Just looking at this equation, you see that organisms with longer generation tim
     
     4b. Can you tweak the initial abundance of juveniles, subadults and adults so that the population exhibits smooth exponential growth for all three age classes (and the population as a whole)? This is called **Stable Age Distribution (S.A.D.)**
     
-    4c. Now change the vital rates (*Juv mort rate*, *Sub mort rate*, *Transition rate to Subadult*, etc.). Is population growth still smooth? If not, can you find the *Stable Age Distribution* now??
+    4c. Now change the vital rates (*Juv mort rate*, *Sub mort rate*, *Transition rate to Subadult*, etc.). Is population growth still smooth? If not, can you find the NEW *Stable Age Distribution*??
     
     4d. Return to the initial model ([this one,  here](https://insightmaker.com/insight/70809/Age-structured-population)). Now change the **Adult mort rate** to 0.65. What happens? Is this a growing population? 
     
