--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -36,7 +36,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming midterm exam
 
-**when and where** The first midterm exam (out of two) is coming up next Monday **March 2**. You will have the whole 50 minute class period to take the exam. The exam will be in our regular classroom. 
+**when and where** The first midterm exam (out of two) is coming up Monday **March 2**. You will have the whole 50 minute class period to take the exam. The exam will be in our regular classroom. 
 
 **what** The exam will cover:
 
