--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -31,8 +31,9 @@ Students will work in groups of ~3-4 people to perform a population viability an
 
 ## Timeline
 
-- **PROPOSAL:** Due Wed March 9!
+- **PROPOSAL:** Due Mon March 9!
 - **INITIAL PVA** Due Fri April 10: description of how your PVA model works and where the parameter estimates come from.
+- **SEND DRAFT FOR PEER REVIEW** Due April 22 (for peer review on April 24)
 - **DRAFT FINAL PAPER:** Due Mon April 27
 - **FINAL FINAL PAPER:** Due Wed May 13
 - **FINAL PRESENTATIONS:** Fri Apr 24 and May 1 in lab!
