--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -147,7 +147,7 @@ See if you can implement this in Excel (or whatever spreadsheet software you use
 
 To a first-order approximation, you can use this equation:
 
-$r = \frac{ln(R_0)}{G}$ 
+$r = \frac{ln(R_0)}{G}$ [tophat]
 
 Just looking at this equation, you see that organisms with longer generation times ($G$) have slower intrinsic rates of growth, all else being equal. 
 
