--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 
 **Instructor:** Kevin Shoemaker   
-**Teaching Assistant** Jason Wurtz (jwurtz_at_nevada_dot_unr_dot_edu)   
+**Teaching Assistant** Megan Osterhout (mosterhout_at_gmail_dot_com)   
 **Website**: [naes.unr.edu/shoemaker/teaching/NRES-470](http://naes.unr.edu/shoemaker/teaching/NRES-470/index.html) 	
 **Phone**: (775)682-7449			  		
 **Email**: kevinshoemaker_at_unr_dot_edu
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office hours**:   
 
 - Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)     
-- Wurtz: Tuesdays at noon (1 hour) (FA 235)     
+- Osterhout: Tuesdays at noon (1 hour) (FA 231)     
   
 
 ### Texts  
