--- a/LAB5.Rmd
+++ b/LAB5.Rmd
@@ -241,7 +241,7 @@ Here are the key model parameters! (note that much of this is simplified and/or 
 3a. Set up an InsightMaker model to represent the above scenario. Embed a link to your InsightMaker model in your write-up. As always, clone your Insight to ensure that this model doesn't change after you submit it!    
 
 3b. Is the current population **viable**, under the criteria listed above? That is, is there a less than 5% risk of extinction over a 50-year time frame?
-    **Hint**: use the *Sensitivity Testing* tool to run 500 replicates. Visualize the 95% quantile. For a viable population, the 90% quantile should stay above 0 (extinction) up to at least year 50 of the simulation (if 90% of the simulation runs fall within the 90% quantile region, then ca. 5% fall below the region and 5% fall above the region -- we only care about the 5% that fall below!).    
+    **Hint**: use the *Sensitivity Testing* tool to run at least 500 replicates. Visualize the 95% quantile. For a viable population under our definition, the lower bound of the 95% quantile region should be above 1 at year 50 of the simulation. Since 95% of the simulation runs fall within the 95% quantile region, then no more than 5% fall below the lower bound!     
     
 3c. Find the **minimum viable population (MVP)**. (Note: you can refer to the "small population paradigm" [lecture](LECTURE9.html) for more detail on the concept of Minimum Viable Population). Explain your reasoning, and provide plot(s) to back up your answer.  
 
@@ -250,7 +250,7 @@ Here are the key model parameters! (note that much of this is simplified and/or 
 3d. (thought question) The Aruba island rattlesnake is limited to the small island of Aruba. This fact alone is one of the main reasons this species is listed as *Critically Endangered* under the IUCN Red List (the major global ranking of conservation status). Explain why small range size might generally be associated with high extinction risk. 
 
 
-##Checklist for Lab 5 completion
+## Checklist for Lab 5 completion
 
 * Please bundle all your responses into a single Word document and submit _using WebCampus_!
 
